; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_ReleasePredXact.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_ReleasePredXact.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@PredXactListElementData = common dso_local global i32 0, align 4
@link = common dso_local global i32* null, align 8
@PredXact = common dso_local global %struct.TYPE_4__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @ReleasePredXact to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ReleasePredXact(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @ShmemAddrIsValid(i32* %4)
  %6 = call i32 @Assert(i32 %5)
  %7 = load i32*, i32** %2, align 8
  %8 = bitcast i32* %7 to i8*
  %9 = load i32, i32* @PredXactListElementData, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = call i8* @offsetof(i32 %9, i32* %10)
  %12 = ptrtoint i8* %8 to i64
  %13 = ptrtoint i8* %11 to i64
  %14 = sub i64 %12, %13
  %15 = load i32, i32* @PredXactListElementData, align 4
  %16 = load i32*, i32** @link, align 8
  %17 = call i8* @offsetof(i32 %15, i32* %16)
  %18 = getelementptr inbounds i8, i8* %17, i64 %14
  %19 = bitcast i8* %18 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %19, %struct.TYPE_3__** %3, align 8
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = call i32 @SHMQueueDelete(i32* %21)
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** @PredXact, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = call i32 @SHMQueueInsertBefore(i32* %24, i32* %26)
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @ShmemAddrIsValid(i32*) #1

declare dso_local i8* @offsetof(i32, i32*) #1

declare dso_local i32 @SHMQueueDelete(i32*) #1

declare dso_local i32 @SHMQueueInsertBefore(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
